# coding-agent-harness

./: .brainstorming-progress.md  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  Procfile  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-diff.txt  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-13-brief.md  task-13-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-diff.txt  task-5-fix-report.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  task-9-brief.md  task-9-report.md  task-webui-brief.md  task-webui-report.md
demo/: run_demo.py
src/harness/: __init__.py  agent_loop.py  cli.py  config.py  credentials.py  feedback.py  guardrail.py  llm.py  memory.py  models.py  parser.py  tools.py  web.py
templates/: index.html
tests/: test_agent_loop.py  test_cli.py  test_config.py  test_credentials.py  test_demo.py  test_feedback.py  test_guardrail.py  test_llm.py  test_memory.py  test_models.py  test_parser.py  test_tools.py  test_web.py
